src/test/ui/bad/bad-module.stderr
error[E0425]: cannot find function `len` in `thing`
  --> $DIR/bad-module.rs:2:22
   |
LL |     let foo = thing::len(Vec::new());
   |                      ^^^ not found in `thing`

error[E0425]: cannot find function `baz` in `foo::bar`
  --> $DIR/bad-module.rs:5:25
   |
LL |     let foo = foo::bar::baz();
   |                         ^^^ not found in `foo::bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
